applying CAU-SE code style